2022-02-03  Chris Dumez  <cdumez@apple.com>

        Rename NetworkConnectionToWebProcess::serverToContextConnectionNoLongerNeeded()
        https://bugs.webkit.org/show_bug.cgi?id=236088

        Reviewed by Darin Adler.

        Rename NetworkConnectionToWebProcess::serverToContextConnectionNoLongerNeeded() to make it clear it is for the
        service worker connection, to avoid confusing with the shared workers.

        * NetworkProcess/NetworkConnectionToWebProcess.cpp:
        (WebKit::NetworkConnectionToWebProcess::serviceWorkerServerToContextConnectionNoLongerNeeded):
        (WebKit::NetworkConnectionToWebProcess::serverToContextConnectionNoLongerNeeded): Deleted.
        * NetworkProcess/NetworkConnectionToWebProcess.h:
        * NetworkProcess/ServiceWorker/WebSWServerToContextConnection.cpp:
        (WebKit::WebSWServerToContextConnection::connectionIsNoLongerNeeded):

2022-02-03  Chris Dumez  <cdumez@apple.com>

        Rename ServiceWorkerInitializationData / ServiceWorkerInformation so they can be reused by shared workers
        https://bugs.webkit.org/show_bug.cgi?id=236089

        Reviewed by Alex Christensen.

        * Shared/RemoteWorkerInitializationData.cpp: Renamed from Source/WebKit/Shared/ServiceWorkerInitializationData.cpp.
        (WebKit::RemoteWorkerInitializationData::encode const):
        (WebKit::RemoteWorkerInitializationData::decode):
        * Shared/RemoteWorkerInitializationData.h: Renamed from Source/WebKit/Shared/ServiceWorkerInitializationData.h.
        * Sources.txt:
        * UIProcess/WebProcessProxy.cpp:
        (WebKit::WebProcessProxy::enableServiceWorkers):
        * UIProcess/WebProcessProxy.h:
        (WebKit::WebProcessProxy::hasServiceWorkerPageProxy):
        * WebKit.xcodeproj/project.pbxproj:
        * WebProcess/Storage/WebSWContextManagerConnection.cpp:
        (WebKit::WebSWContextManagerConnection::WebSWContextManagerConnection):
        * WebProcess/Storage/WebSWContextManagerConnection.h: